--- a/css/style-all-size.css
+++ b/css/style-all-size.css
@@ -26,6 +26,11 @@ section {
   visibility: hidden;
 }
 
+.fadeOut {
+  -webkit-animation: fadeOut 0.5s;
+   animation: fadeOut 0.5s;
+}
+
 @-webkit-keyframes fadeIn {
     from { opacity: 0; }
       to { opacity: 1; }
@@ -34,6 +39,17 @@ section {
 @keyframes fadeIn {
     from { opacity: 0; }
       to { opacity: 1; }
+}
+/*--------------------------------------------------------------------------- */
+
+@-webkit-keyframes fadeOut {
+    from { opacity: 1; }
+      to { opacity: 0; }
+}
+
+@keyframes fadeOut {
+    from { opacity: 1; }
+      to { opacity: 0; }
 }
 
 .yellow {
