--- a/css/style-size-l.css
+++ b/css/style-size-l.css
@@ -601,17 +601,18 @@ nav {
   background-image: url('../assets/shapes/timeline/timeline-background.svg');
   background-position: left;
   background-repeat: no-repeat;
-  max-width: 290px;
+  max-width: 300px;
   height: 50px;
   display: flex;
   margin-top: 10px;
   width: 100%;
   background-blend-mode: overlay;
+  background-size: cover;
   position: relative;
 }
 
 .progress-bar-content {
-  width: 2px;
+  width: 1px;
   height: 100%;
   position: relative;
   margin-right: 4px;
@@ -655,7 +656,7 @@ nav {
 /* Value + */
 
 .time-line-minutes {
-  width: 290px;
+  width: 300px;
   justify-content: space-between;
   display: flex;
   margin-top: -4px;
